fix word wrapping issue on voting

--- a/app/assets/stylesheets/askr.scss
+++ b/app/assets/stylesheets/askr.scss
@@ -81,6 +81,7 @@ body {
   li {
     list-style: none;
     margin: 0.9em 0 0.9em 0;
+    word-wrap: break-word;
 
     border-radius: 5px;
     border: 1px solid #FFFFFF;
